...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:textColor="@color/normal_brown"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_addCoffee"
            android:textColor="@color/normal_brown"
            android:title="@string/menu_addCoffee" />

        <item
            android:id="@+id/nav_filter"
            android:textColor="@color/normal_brown"
            android:title="@string/menu_filter" />

        <item
            android:id="@+id/nav_support"
            android:textColor="@color/normal_brown"
            android:title="@string/menu_support" />
    </group>
</menu>
