...
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.DayNight">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark_brown"
            app:popupTheme="@style/Theme.Coffee.PopupOverlay"
            app:titleTextColor="@color/gray" />
...
