<resources>
    <string name="app_name">Coffee</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_addCoffee">Add Coffee</string>
    <string name="menu_search">Search</string>
    <string name="menu_support">Support</string>
    <string name="owner">Owner</string>
...
    <string name="price_add_lbl">Price [€]:</string>
    <string name="quantity_lbl">Quantity:</string>
    <string name="quantity_add_lbl">Quantity [kg]:</string>
    <string name="strength">Strength:</string>
    <string name="additional_information">Additional information:</string>
    <string name="reviews_btn">Reviews</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="comment_hint">Please write your comment here.</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_search">Filter &amp; Search</string>
    <string name="filter_btn">Filter</string>
    <string name="all_shops">All Shops</string>
    <string name="settings">Settings</string>
    <string name="FirstLanguage">English</string>
    <string name="SecondLanguage">Russian</string>
    <string name="ThirdLanguage">Albanian</string>
    <string name="LanguageApplyButton">Apply</string>
    <string name="filter_result">Filter Result</string>
    <string name="search">Search:</string>
    <string name="empty_list">No coffee has been found.</string>
    <string name="tel_nr" >Telefon</string>
    <string name="tel_nrPO">0664 9246052</string>
    <string name="email">E-Mail Address</string>
...
