...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="92dp"
        android:text="@string/comment"
        android:textSize="18sp"
...
